--- a/clases/clase1/index.html
+++ b/clases/clase1/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer sitio</title>
 </head>
+
 <body>
-    Hola mundo este es mi primer sitio
+    <header>
+        <h1>
+            Hola soy el header
+        </h1>
+        <a href="https://www.mercadolibre.com.co/#from=homecom">
+        Ir a mercadolibre
+        </a>
+    </header>
+    <main>
+        <h1>
+            Soy el contenido central
+        </h1>
+        <h1>Hola soy un titulo grande</h1>
+        <h2>Hola soy un subtitulo</h2>
+        <h3>Soy otro titulo</h3>
+        <h4>más pequeñio</h4>
+        <h5>pequeño</h5>
+        <h6>enanno</h6>
+        <p>Este es mi primer sitio y estoy aprendiendo</p>
+    </main>
+    <footer>
+        <h1>
+
+            Soy el contenido final
+        </h1>
+    </footer>
 </body>
+
 </html>
