--- a/clases/clase1/comida.html
+++ b/clases/clase1/comida.html
@@ -16,9 +16,21 @@
         <p>Desde pequeño mi madre me daba arepa cona atún y me gusta. si quieres ver la receta
             <a href="https://www.youtube.com/watch?v=x5Mt1AOnY-U&ab_channel=ElMundoDeLynda">visita este vídeo</a>
         </p>
+        <h2>Arepa con atun</h2>
+        <p>Desde pequeño mi madre me daba arepa cona atún y me gusta. si quieres ver la receta
+            <a href="https://www.youtube.com/watch?v=x5Mt1AOnY-U&ab_channel=ElMundoDeLynda">visita este vídeo</a>
+        </p>
+        <h2>Arepa con atun</h2>
+        <p>Desde pequeño mi madre me daba arepa cona atún y me gusta. si quieres ver la receta
+            <a href="https://www.youtube.com/watch?v=x5Mt1AOnY-U&ab_channel=ElMundoDeLynda">visita este vídeo</a>
+        </p>
+        <h2>Arepa con atun</h2>
+        <p>Desde pequeño mi madre me daba arepa cona atún y me gusta. si quieres ver la receta
+            <a href="https://www.youtube.com/watch?v=x5Mt1AOnY-U&ab_channel=ElMundoDeLynda">visita este vídeo</a>
+        </p>
     </main>
     <footer>
-
+        <h3>Gracias por visitar mi foro!!! :D</h3>
     </footer>
 
 </body>
